--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -10,98 +10,10 @@
 </div>
 
 
-<div class="col col-sm-9 mx-auto">
-    <strong>{{ content }}</strong>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In euismod aliquet est, id feugiat tellus
-        vulputate eu.
-        Donec rhoncus massa sed ligula egestas, sit amet posuere ante pulvinar. Donec enim nunc, maximus quis
-        dictum
-        eget,
-        convallis sit amet velit. Donec aliquam euismod blandit. Nulla molestie commodo sodales. Etiam rhoncus
-        non enim
-        vel
-        consequat. Mauris maximus diam ac velit ullamcorper rhoncus. Donec eget ex rhoncus, sodales ex
-        convallis,
-        hendrerit
-        est. Vivamus neque neque, auctor id pretium et, gravida vitae mauris. Ut eget orci sit amet mauris
-        pharetra
-        egestas
-        lacinia nec velit. Nam facilisis finibus feugiat. Suspendisse volutpat dictum sagittis. Fusce lobortis
-        rutrum ex
-        ac
-        placerat. Nullam porttitor sapien at nisi mattis commodo. Vivamus turpis neque, feugiat id sollicitudin
-        id,
-        congue
-        et lectus.
-    </p>
+<div class="col col-sm-7 mx-auto">
+    {{ content | safe}}
 
-    <p>
-        Nulla ullamcorper justo sit amet volutpat tristique. Morbi dignissim molestie urna, ut finibus enim
-        tristique
-        sed.
-        Duis ut libero diam. Mauris in augue eget leo faucibus porta. Maecenas porttitor sem metus, in sagittis
-        lorem
-        lacinia vel. Nam et justo ac nisl consequat facilisis vel venenatis sem. Quisque luctus malesuada ex id
-        molestie.
-        Duis quis sodales ipsum. Mauris eu enim in lorem consequat vestibulum. Etiam condimentum mauris vel
-        maximus
-        tempor.
-    </p>
-
-
-    <p>
-        Mauris a fringilla justo, nec convallis nibh. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada
-        fames ac turpis egestas. Morbi ipsum metus, placerat non nisi vitae, posuere convallis massa. Sed et
-        augue
-        ultricies, viverra mauris eu, semper nisi. Maecenas a fermentum quam, quis hendrerit quam. Praesent
-        sollicitudin
-        dignissim est sed rhoncus. Vivamus bibendum mi ut dolor viverra, ut cursus turpis dapibus. Quisque id
-        ipsum
-        vehicula, rutrum urna eu, tincidunt arcu. Duis fringilla viverra ligula id tristique. Suspendisse
-        consequat
-        lorem et
-        eros malesuada, non rhoncus felis tristique. In consectetur imperdiet augue sed pellentesque.
-    </p>
-
-    <p>
-        Proin et lobortis tellus. Proin arcu dui, facilisis sed porta eu, egestas eget turpis. Integer tristique
-        sem at
-        neque vulputate, non placerat ligula tincidunt. Vivamus eget urna erat. Duis ex ex, fermentum eget nisi
-        non,
-        commodo
-        tincidunt odio. Aenean efficitur viverra augue, sed semper nunc dapibus vehicula. Vestibulum mollis,
-        risus eu
-        mattis
-        sagittis, sem tortor ultrices quam, in tincidunt augue lectus at mi. Fusce nisl sem, luctus vitae ipsum
-        ac,
-        vulputate viverra magna. Fusce vehicula, leo eu hendrerit efficitur, nunc mauris euismod felis, nec
-        egestas
-        velit
-        orci non sapien.
-    </p>
-
-    <p>
-        Nulla volutpat ipsum at arcu tempus, nec malesuada tellus suscipit. Suspendisse potenti. Donec ut lorem
-        vel
-        metus
-        dictum hendrerit. Praesent efficitur a nibh quis ultrices. Praesent diam justo, venenatis a commodo sed,
-        venenatis
-        dignissim velit. In viverra felis pellentesque, tincidunt erat eget, tempus diam. Pellentesque rhoncus,
-        dui ac
-        feugiat tincidunt, nibh nulla ultrices libero, at commodo mauris felis ut erat. Sed mattis sapien sed
-        nibh
-        ultrices,
-        ut gravida nisl luctus. Pellentesque sit amet commodo lectus, sed tincidunt nunc. Cras diam nunc,
-        pretium sed
-        eros
-        eget, lobortis elementum nisi. Quisque commodo dolor at purus lobortis placerat nec vitae neque. Nam
-        nisi nulla,
-        faucibus at velit quis, pulvinar imperdiet nibh.
-
-    </p>
 </div>
-
 
 
 {% endblock %}
