--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -9,11 +9,9 @@
     </p>
 </div>
 
-
-<div class="col col-sm-7 mx-auto">
+<div class="col col-sm-7 mx-auto" style="padding: 3em 0;">
     {{ content | safe}}
 
 </div>
-
 
 {% endblock %}
