--- a/website/templates/base_template.html
+++ b/website/templates/base_template.html
@@ -99,6 +99,10 @@
             // get current URL path and assign 'active' class
             var pathname = window.location.pathname;
             pathname = pathname.substring(0, pathname.length - 1);
+            if(pathname[1] == '3')
+             {
+                 $('.navbar-nav > li > a[href="' + '#' + '"]').parent().addClass('active');
+             }
             $('.navbar-nav > li > a[href="' + pathname + '"]').parent().addClass('active');
         })
     </script>
