--- a/website/templates/base_template.html
+++ b/website/templates/base_template.html
@@ -12,16 +12,17 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Quicksand&display=swap" rel="stylesheet">
     <title>#100DaysOfK8s</title>
     <link rel="shortcut icon" type="image/x-icon" href="static/image/favicon.ico" />
+    {% load static %}
 </head>
 
 <body style="padding-top:30px; font-size: 22px;">
-
+    
     <div class="container-fluid">
 
         <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark"
             style="font-size: 20px; font-family: 'Quicksand', sans-serif;">
             <a class="navbar-brand" href="https://100daysOfK8s.io">
-                <image src="/static/image/favicon.ico" width="30" height="30" alt="">
+                <img src="{% static 'image/favicon.ico' %}" width="30" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="reset" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -59,12 +60,12 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com" target="_blank"><span class="sr-only">(current)</span>
-                            <image src="/static/image/github-logo.png" width="30" height="30">
+                            <img src="{% static 'image/github-logo.png' %}" width="30" height="30">
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://twitter.com" target="_blank"><span class="sr-only">(current)</span>
-                            <image src="/static/image/twitter-logo.png" width="30" height="30">
+                            <img src="{% static 'image/twitter-logo.png' %}" width="30" height="30">
                         </a>
                     </li>
                 </ul>
