update Resource and Rules pages

--- a/website/templates/base_template.html
+++ b/website/templates/base_template.html
@@ -16,7 +16,7 @@
    
 </head>
 
-<body style="padding-top:30px; font-size: 22px;">
+<body style="padding-top:30px; padding-bottom:60px; font-size: 22px;">
     
     <div class="container-fluid">
 
