--- a/website/templates/page_template.html
+++ b/website/templates/page_template.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="col col-sm-7 mx-auto" style="padding-top: 100px;">
+<div class="col col-sm-6 mx-auto" style="padding-top: 100px; font-size: 20px; font-family: 'Quicksand', sans-serif;">
    {{ content | safe}}
 </div>
         
