--- a/website/templates/base_template.html
+++ b/website/templates/base_template.html
@@ -11,18 +11,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR|Quicksand&display=swap" rel="stylesheet">
+    <style>
+        li {
+            margin: 10px 0;
+        }
+    </style>
+
     <title>#100DaysOfK8s</title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'image/favicon.ico' %}" />
-   
+
 </head>
 
 <body style="padding-top:30px; padding-bottom:60px; font-size: 22px;">
-    
+
     <div class="container-fluid">
 
         <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark"
             style="font-size: 20px; font-family: 'Quicksand', sans-serif;">
-            <a class="navbar-brand" href="https://100daysOfK8s.io">
+            <a class="navbar-brand" href="/">
                 <img src="{% static 'image/favicon.ico' %}" width="30" height="30" alt="">
             </a>
             <button class="navbar-toggler" type="reset" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -60,12 +66,14 @@
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com" target="_blank"><span class="sr-only">(current)</span>
+                        <a class="nav-link" href="https://github.com" target="_blank"><span
+                                class="sr-only">(current)</span>
                             <img src="{% static 'image/github-logo.png' %}" width="30" height="30">
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com" target="_blank"><span class="sr-only">(current)</span>
+                        <a class="nav-link" href="https://twitter.com" target="_blank"><span
+                                class="sr-only">(current)</span>
                             <img src="{% static 'image/twitter-logo.png' %}" width="30" height="30">
                         </a>
                     </li>
@@ -101,10 +109,9 @@
             // get current URL path and assign 'active' class
             var pathname = window.location.pathname;
             pathname = pathname.substring(0, pathname.length - 1);
-            if(pathname[1] == '3')
-             {
-                 $('.navbar-nav > li > a[href="' + '#' + '"]').parent().addClass('active');
-             }
+            if (pathname[1] == '3') {
+                $('.navbar-nav > li > a[href="' + '#' + '"]').parent().addClass('active');
+            }
             $('.navbar-nav > li > a[href="' + pathname + '"]').parent().addClass('active');
         })
     </script>
