Update Github and Twitter URLs

--- a/website/templates/base_template.html
+++ b/website/templates/base_template.html
@@ -81,13 +81,13 @@
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com" target="_blank"><span
+                        <a class="nav-link" href="https://github.com/vmnomad/hundred_days_of_k8s" target="_blank"><span
                                 class="sr-only">(current)</span>
                             <img src="{% static 'image/github-logo.png' %}" width="30" height="30">
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://twitter.com" target="_blank"><span
+                        <a class="nav-link" href="https://twitter.com/100DaysOfK8s" target="_blank"><span
                                 class="sr-only">(current)</span>
                             <img src="{% static 'image/twitter-logo.png' %}" width="30" height="30">
                         </a>
